# jax-rrtmgp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_test.yaml
jax_rrtmgp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rrtmgp/: interpolation.py  kernel_ops.py  radiative_eqb_solver.py  radiative_eqb_test.py  radiative_eqb_test_util.py  rrtmgp.py  rrtmgp_common.py  test_util.py
rrtmgp/config/: radiative_transfer.py
rrtmgp/optics/: atmospheric_state.py  atmospheric_state_test.py  cloud_optics.py  cloud_optics_test.py  data_loader_base.py  gas_optics.py  gas_optics_test.py  lookup_cloud_optics.py  lookup_cloud_optics_test.py  lookup_gas_optics_base.py  lookup_gas_optics_longwave.py  lookup_gas_optics_longwave_test.py  lookup_gas_optics_shortwave.py  lookup_gas_optics_shortwave_test.py  lookup_volume_mixing_ratio.py  lookup_volume_mixing_ratio_test.py  optics.py  optics_base.py  optics_test.py  optics_utils.py  optics_utils_test.py
rrtmgp/rte/: all_sky_test.py  clear_sky_test.py  monochromatic_two_stream.py  monochromatic_two_stream_test.py  rte_utils_test.py  two_stream.py  two_stream_test.py
rrtmgp/utils/: file_io.py
swirl_jatmos/: __init__.py  buoyancy_balanced_pressure.py  buoyancy_balanced_pressure_test.py  common_ops.py  config.py  config_test.py  constants.py  convection.py  convection_config.py  convection_test.py  derivatives.py  derivatives_test.py  diffusion.py  driver.py  interpolation.py  interpolation_test.py  navier_stokes_step.py  scalars.py  sgs.py  sim_initializer.py  sponge.py  sponge_config.py  stretched_grid_init.py  stretched_grid_init_test.py  stretched_grid_util.py  test_util.py  timestep_control.py  timestep_control_config.py  timestep_control_test.py  types.py  velocity.py
swirl_jatmos/boundary_conditions/: apply_bcs.py  boundary_conditions.py  monin_obukhov.py
swirl_jatmos/demos/: rcemip_demo.ipynb  supercell_demo.ipynb
swirl_jatmos/linalg/: fast_diagonalization_solver.py  fast_diagonalization_solver_impl.py  fast_diagonalization_solver_impl_test.py  jacobi_solver.py  jacobi_solver_impl.py  (+2 more)
(+66 files in other folders)
