[project]
name = "jax-rrtmgp"
description = "JAX-based implementation of RRTMGP radiative transfer for atmospheric modeling."
readme = "README.md"
requires-python = ">=3.11"
version = "0.1"
license = {file = "LICENSE"}
authors = [
  {name = "parkerjeff", email="parkerjeff@google.com"},
  {name = "dwatsonparris", email="dwatsonparris@ucsd.edu"}
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["atmospheric modeling", "radiative transfer", "RRTMGP", "JAX", "climate science"]

dependencies = [
    "dataclasses-json",
    "jax",
    "netCDF4",
    "numpy",
    ]

    [project.optional-dependencies]
    dev = [
      "pytest",
    ]
]

[project.urls]
homepage = "https://github.com/climate-analytics-lab/jax-rrtmgp"
repository = "https://github.com/climate-analytics-lab/jax-rrtmgp"
